Remove redundant and duplicated code in HiPhivePriority Replace streams with collections in HiPhivePriorityResult constructor