@@ -1,7 +1,7 @@
 /*
  * The Exomiser - A tool to annotate and prioritize genomic variants
  *
- * Copyright (c) 2016-2020 Queen Mary University of London.
+ * Copyright (c) 2016-2021 Queen Mary University of London.
  * Copyright (c) 2012-2016 Charité Universitätsmedizin Berlin and Genome Research Ltd.
  *
  * This program is free software: you can redistribute it and/or modify
@@ -21,7 +21,6 @@
 package org.monarchinitiative.exomiser.core.prioritisers;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Maps;
 import de.charite.compbio.jannovar.mendel.ModeOfInheritance;
 import org.monarchinitiative.exomiser.core.phenotype.ModelPhenotypeMatch;
@@ -44,21 +43,16 @@ import static java.util.stream.Collectors.toMap;
  */
 public class HiPhivePriorityResult extends AbstractPriorityResult {
 
-    private double humanScore = 0;
-    private double mouseScore = 0;
-    private double fishScore = 0;
-
     private final double ppiScore;
 
     private final boolean candidateGeneMatch;
 
     private final List<PhenotypeTerm> queryPhenotypeTerms;
-    private final List<GeneModelPhenotypeMatch> phenotypeEvidence;
+    private final Map<Organism, GeneModelPhenotypeMatch> phenotypeEvidence;
 
     private final List<GeneModelPhenotypeMatch> diseaseMatches;
     private final Map<ModeOfInheritance, List<ModelPhenotypeMatch<Disease>>> diseaseMatchesByMoi;
 
-    //TODO - split phenotypeEvidence into organism-specific lists ordered by score, or just do it dynamically getDiseaseModelMatches(), getMouseModelMatches(), getFishModelMatches()?
     private final List<GeneModelPhenotypeMatch> ppiEvidence;
 
 
@@ -67,33 +61,10 @@ public class HiPhivePriorityResult extends AbstractPriorityResult {
      */
     public HiPhivePriorityResult(int geneId, String geneSymbol, double score, List<PhenotypeTerm> queryPhenotypeTerms, List<GeneModelPhenotypeMatch> phenotypeEvidence, List<GeneModelPhenotypeMatch> ppiEvidence, double ppiScore, boolean candidateGeneMatch) {
         super(PriorityType.HIPHIVE_PRIORITY, geneId, geneSymbol, score);
-        this.queryPhenotypeTerms = Objects.requireNonNullElse(queryPhenotypeTerms, ImmutableList.of());
+        this.queryPhenotypeTerms = Objects.requireNonNullElse(queryPhenotypeTerms, List.of());
         Objects.requireNonNull(phenotypeEvidence);
-
-        // TODO convert these to ModelPhenotypeMatch<GeneModel> and remove GeneModelPhenotypeMatch?
-        GeneModelPhenotypeMatch bestDiseaseMatch = getBestMatchForOrganism(phenotypeEvidence, Organism.HUMAN);
-        GeneModelPhenotypeMatch bestMouseMatch = getBestMatchForOrganism(phenotypeEvidence, Organism.MOUSE);
-        GeneModelPhenotypeMatch bestFishMatch = getBestMatchForOrganism(phenotypeEvidence, Organism.FISH);
-
-        // maybe get best object here as we need these later
-        humanScore = bestDiseaseMatch == null ? 0 : bestDiseaseMatch.getScore();
-        mouseScore = bestMouseMatch == null ? 0 : bestMouseMatch.getScore();
-        fishScore = bestFishMatch == null ? 0 : bestFishMatch.getScore();
-
-        List<GeneModelPhenotypeMatch> topScoringModels = new ArrayList<>();
-        if (bestDiseaseMatch != null) topScoringModels.add(bestDiseaseMatch);
-        if (bestMouseMatch != null) topScoringModels.add(bestMouseMatch);
-        if (bestFishMatch != null) topScoringModels.add(bestFishMatch);
-//        topScoringModels.sort(Comparator.comparing(GeneModelPhenotypeMatch::getScore).reversed());
-
-        this.phenotypeEvidence = ImmutableList.copyOf(topScoringModels);
-
-        ImmutableList.Builder<GeneModelPhenotypeMatch> diseaseModelsBuilder = new ImmutableList.Builder<>();
-        phenotypeEvidence.stream()
-                .filter(geneModelPhenotypeMatch -> geneModelPhenotypeMatch.getOrganism() == Organism.HUMAN)
-                .sorted(Comparator.comparing(GeneModelPhenotypeMatch::getScore).reversed())
-                .forEachOrdered(diseaseModelsBuilder::add);
-        this.diseaseMatches = diseaseModelsBuilder.build();
+        this.phenotypeEvidence = getTopScoringModels(phenotypeEvidence);
+        this.diseaseMatches = getDiseaseMatches(phenotypeEvidence);
 //        interface ModelMatch<T extends Model> extends Comparable<ModelPhenotypeMatch<?>>
 //        final class ModelPhenotypeMatch<T extends Model> implements ModelMatch<Model>
 //        abstract class GeneModelPhenotypeMatch<T extends GeneModel> implements ModelMatch<T>
@@ -105,6 +76,25 @@ public class HiPhivePriorityResult extends AbstractPriorityResult {
         this.ppiScore = ppiScore;
 
         this.candidateGeneMatch = candidateGeneMatch;
+    }
+
+    private Map<Organism, GeneModelPhenotypeMatch> getTopScoringModels(List<GeneModelPhenotypeMatch> phenotypeEvidence) {
+        Map<Organism, GeneModelPhenotypeMatch> topScoringModels = new EnumMap<>(Organism.class);
+        for (Organism organism : Organism.values()) {
+            topScoringModels.compute(organism, (k, v) -> getBestMatchForOrganism(phenotypeEvidence, organism));
+        }
+        return Collections.unmodifiableMap(topScoringModels);
+    }
+
+    private List<GeneModelPhenotypeMatch> getDiseaseMatches(List<GeneModelPhenotypeMatch> phenotypeEvidence) {
+        List<GeneModelPhenotypeMatch> toSort = new ArrayList<>();
+        for (GeneModelPhenotypeMatch geneModelPhenotypeMatch : phenotypeEvidence) {
+            if (geneModelPhenotypeMatch.getOrganism() == Organism.HUMAN) {
+                toSort.add(geneModelPhenotypeMatch);
+            }
+        }
+        toSort.sort(Comparator.comparing(GeneModelPhenotypeMatch::getScore).reversed());
+        return List.copyOf(toSort);
     }
 
     private Map<ModeOfInheritance, List<ModelPhenotypeMatch<Disease>>> mapDiseaseModelsByMoi(List<GeneModelPhenotypeMatch> diseaseMatches) {
@@ -126,13 +116,14 @@ public class HiPhivePriorityResult extends AbstractPriorityResult {
 //                }
 //            }
             // strict - will only add disease with known and compatible MOI
-            Set<ModeOfInheritance> modesOfInheritance = disease.getInheritanceMode().toModeOfInheritance();
+            Set<ModeOfInheritance> modesOfInheritance = copyWithAnyMoi(disease.getInheritanceMode().toModeOfInheritance());
+            ModelPhenotypeMatch<Disease> diseaseModelPhenotypeMatch = toModelPhenotypeMatch(diseasePhenotypeMatch);
             for (ModeOfInheritance moi : modesOfInheritance) {
                 if (diseaseModelsMoi.containsKey(moi)) {
-                    diseaseModelsMoi.get(moi).add(toModelPhenotypeMatch(diseasePhenotypeMatch));
+                    diseaseModelsMoi.get(moi).add(diseaseModelPhenotypeMatch);
                 } else {
-                    ArrayList<ModelPhenotypeMatch<Disease>> matches = new ArrayList<>();
-                    matches.add(toModelPhenotypeMatch(diseasePhenotypeMatch));
+                    List<ModelPhenotypeMatch<Disease>> matches = new ArrayList<>();
+                    matches.add(diseaseModelPhenotypeMatch);
                     diseaseModelsMoi.put(moi, matches);
                 }
             }
@@ -140,26 +131,20 @@ public class HiPhivePriorityResult extends AbstractPriorityResult {
         return Maps.immutableEnumMap(diseaseModelsMoi);
     }
 
+    private Set<ModeOfInheritance> copyWithAnyMoi(Set<ModeOfInheritance> modesOfInheritance) {
+        Set<ModeOfInheritance> withAny = EnumSet.of(ModeOfInheritance.ANY);
+        withAny.addAll(modesOfInheritance);
+        return withAny;
+    }
+
     private ModelPhenotypeMatch<Disease> toModelPhenotypeMatch(GeneModelPhenotypeMatch diseasePhenotypeMatch) {
         GeneDiseaseModel geneDiseaseModel = (GeneDiseaseModel) diseasePhenotypeMatch.getModel();
         return ModelPhenotypeMatch.of(diseasePhenotypeMatch.getScore(), geneDiseaseModel.getDisease(), diseasePhenotypeMatch.getBestModelPhenotypeMatches());
     }
 
-    private double getMaxScoreForOrganism(List<GeneModelPhenotypeMatch> phenotypeEvidence, Organism organism) {
-        double best = 0;
-        for (GeneModelPhenotypeMatch geneModelPhenotypeMatch : phenotypeEvidence) {
-            if (geneModelPhenotypeMatch.getOrganism() == organism) {
-                double matchScore = geneModelPhenotypeMatch.getScore();
-                best = Math.max(matchScore, best);
-            }
-        }
-        return best;
-    }
-
     @Nullable
     private GeneModelPhenotypeMatch getBestMatchForOrganism(List<GeneModelPhenotypeMatch> phenotypeEvidence, Organism organism) {
         double bestScore = 0;
-//        ModelPhenotypeMatch<GeneModel> bestMatch = null;
         GeneModelPhenotypeMatch bestMatch = null;
         for (GeneModelPhenotypeMatch geneModelPhenotypeMatch : phenotypeEvidence) {
             if (geneModelPhenotypeMatch.getOrganism() == organism) {
@@ -167,7 +152,6 @@ public class HiPhivePriorityResult extends AbstractPriorityResult {
                 if (Double.compare(matchScore, bestScore) > 0) {
                     bestScore = matchScore;
                     bestMatch = geneModelPhenotypeMatch;
-//                bestMatch = ModelPhenotypeMatch.of(geneModelPhenotypeMatch.getScore(),geneModelPhenotypeMatch.getModel(), geneModelPhenotypeMatch.getBestModelPhenotypeMatches());
                 }
             }
         }
@@ -189,7 +173,7 @@ public class HiPhivePriorityResult extends AbstractPriorityResult {
     }
 
     public List<GeneModelPhenotypeMatch> getPhenotypeEvidence() {
-        return phenotypeEvidence;
+        return List.copyOf(phenotypeEvidence.values());
     }
 
     public List<GeneModelPhenotypeMatch> getDiseaseMatches() {
@@ -197,7 +181,7 @@ public class HiPhivePriorityResult extends AbstractPriorityResult {
     }
 
     public List<ModelPhenotypeMatch<Disease>> getCompatibleDiseaseMatches(ModeOfInheritance modeOfInheritance) {
-        return diseaseMatchesByMoi.getOrDefault(modeOfInheritance, ImmutableList.of());
+        return diseaseMatchesByMoi.getOrDefault(modeOfInheritance, List.of());
     }
 
     public List<GeneModelPhenotypeMatch> getPpiEvidence() {
@@ -205,15 +189,20 @@ public class HiPhivePriorityResult extends AbstractPriorityResult {
     }
 
     public double getHumanScore() {
-        return humanScore;
+        return getScoreForOrganism(Organism.HUMAN);
     }
 
     public double getMouseScore() {
-        return mouseScore;
+        return getScoreForOrganism(Organism.MOUSE);
     }
 
     public double getFishScore() {
-        return fishScore;
+        return getScoreForOrganism(Organism.FISH);
+    }
+
+    private double getScoreForOrganism(Organism organism) {
+        GeneModelPhenotypeMatch geneModelPhenotypeMatch = phenotypeEvidence.get(organism);
+        return geneModelPhenotypeMatch == null ? 0d : geneModelPhenotypeMatch.getScore();
     }
 
     public double getPpiScore() {
@@ -233,7 +222,7 @@ public class HiPhivePriorityResult extends AbstractPriorityResult {
         StringBuilder mouseBuilder = new StringBuilder();
         StringBuilder fishBuilder = new StringBuilder();
 
-        for (GeneModelPhenotypeMatch geneModelPhenotypeMatch : phenotypeEvidence) {
+        for (GeneModelPhenotypeMatch geneModelPhenotypeMatch : phenotypeEvidence.values()) {
             Map<PhenotypeTerm, PhenotypeMatch> bestMatchesForModel = getPhenotypeTermPhenotypeMatchMap(geneModelPhenotypeMatch);
             switch (geneModelPhenotypeMatch.getOrganism()) {
                 case HUMAN:
@@ -299,7 +288,7 @@ public class HiPhivePriorityResult extends AbstractPriorityResult {
     public String getHTMLCode() {
         StringBuilder stringBuilder = new StringBuilder();
 
-        for (GeneModelPhenotypeMatch geneModelPhenotypeMatch : phenotypeEvidence) {
+        for (GeneModelPhenotypeMatch geneModelPhenotypeMatch : phenotypeEvidence.values()) {
             switch (geneModelPhenotypeMatch.getOrganism()) {
                 case HUMAN:
                     GeneDiseaseModel geneDiseaseModel = (GeneDiseaseModel) geneModelPhenotypeMatch.getModel();
@@ -393,16 +382,12 @@ public class HiPhivePriorityResult extends AbstractPriorityResult {
         if (o == null || getClass() != o.getClass()) return false;
         if (!super.equals(o)) return false;
         HiPhivePriorityResult that = (HiPhivePriorityResult) o;
-        return Double.compare(that.humanScore, humanScore) == 0 &&
-                Double.compare(that.mouseScore, mouseScore) == 0 &&
-                Double.compare(that.fishScore, fishScore) == 0 &&
-                Double.compare(that.ppiScore, ppiScore) == 0 &&
-                candidateGeneMatch == that.candidateGeneMatch;
+        return Double.compare(that.ppiScore, ppiScore) == 0 && candidateGeneMatch == that.candidateGeneMatch && queryPhenotypeTerms.equals(that.queryPhenotypeTerms) && phenotypeEvidence.equals(that.phenotypeEvidence);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(super.hashCode(), humanScore, mouseScore, fishScore, ppiScore, candidateGeneMatch);
+        return Objects.hash(super.hashCode(), ppiScore, candidateGeneMatch, queryPhenotypeTerms, phenotypeEvidence);
     }
 
     @Override
@@ -411,13 +396,13 @@ public class HiPhivePriorityResult extends AbstractPriorityResult {
                 "geneId=" + geneId +
                 ", geneSymbol='" + geneSymbol + '\'' +
                 ", score=" + score +
-                ", humanScore=" + humanScore +
-                ", mouseScore=" + mouseScore +
-                ", fishScore=" + fishScore +
+                ", humanScore=" + getHumanScore() +
+                ", mouseScore=" + getMouseScore() +
+                ", fishScore=" + getFishScore() +
                 ", ppiScore=" + ppiScore +
                 ", candidateGeneMatch=" + candidateGeneMatch +
                 ", queryPhenotypeTerms=" + queryPhenotypeTerms +
-                ", phenotypeEvidence=" + phenotypeEvidence +
+                ", phenotypeEvidence=" + phenotypeEvidence.values() +
                 ", ppiEvidence=" + ppiEvidence +
                 '}';
     }
