@@ -31,8 +31,6 @@ import org.monarchinitiative.exomiser.core.phenotype.Organism;
 import org.monarchinitiative.exomiser.core.phenotype.PhenotypeTerm;
 import org.monarchinitiative.exomiser.core.prioritisers.model.*;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -58,9 +56,9 @@ public class HiPhivePriorityResultTest {
     
     @BeforeEach
     public void setUp() {
-        queryPhenotypeTerms = new ArrayList<>();
-        phenotypeEvidence = new ArrayList<>();
-        ppiEvidence = new ArrayList<>();
+        queryPhenotypeTerms = List.of();
+        phenotypeEvidence = List.of();
+        ppiEvidence = List.of();
         instance = new HiPhivePriorityResult(geneId, geneSymbol, score, queryPhenotypeTerms, phenotypeEvidence, ppiEvidence, ppiScore, matchesCandidateGene);
     }
 
@@ -119,28 +117,26 @@ public class HiPhivePriorityResultTest {
 
     @Test
     public void testGetHumanScoreMatchesModelScore() {
-        double modelScore = 1d;
-        GeneModelPhenotypeMatch geneModel = stubGeneModelPhenotypeMatch(Organism.HUMAN, modelScore);
+        GeneModelPhenotypeMatch geneModel = stubGeneModelPhenotypeMatch(Organism.HUMAN, 1d);
 
-        List<GeneModelPhenotypeMatch> models = Arrays.asList(geneModel);
+        List<GeneModelPhenotypeMatch> models = List.of(geneModel);
         instance = new HiPhivePriorityResult(geneId, geneSymbol, score, queryPhenotypeTerms, models, ppiEvidence, ppiScore, false);
 
-        assertThat(instance.getHumanScore(), equalTo(modelScore));
+        assertThat(instance.getHumanScore(), equalTo(geneModel.getScore()));
     }
 
     @Test
     public void testGetHumanScoreMatchesTopModelScore() {
-        double modelScore = 1d;
-        GeneModelPhenotypeMatch geneModel = stubGeneModelPhenotypeMatch(Organism.HUMAN, modelScore);
+        GeneModelPhenotypeMatch topGeneModel = stubGeneModelPhenotypeMatch(Organism.HUMAN, 1d);
         GeneModelPhenotypeMatch poorMatchModel = stubGeneModelPhenotypeMatch(Organism.HUMAN, 0.5);
 
         // note these are provided with the worst score first to test that the HiPhivePriorityResult orders things internally
-        List<GeneModelPhenotypeMatch> models = Arrays.asList(poorMatchModel, geneModel);
+        List<GeneModelPhenotypeMatch> models = List.of(poorMatchModel, topGeneModel);
         instance = new HiPhivePriorityResult(geneId, geneSymbol, score, queryPhenotypeTerms, models, ppiEvidence, ppiScore, false);
 
-        assertThat(instance.getHumanScore(), equalTo(modelScore));
-        assertThat(instance.getPhenotypeEvidence(), equalTo(List.of(geneModel)));
-        assertThat(instance.getDiseaseMatches(), equalTo(List.of(geneModel, poorMatchModel)));
+        assertThat(instance.getHumanScore(), equalTo(topGeneModel.getScore()));
+        assertThat(instance.getPhenotypeEvidence(), equalTo(List.of(topGeneModel)));
+        assertThat(instance.getDiseaseMatches(), equalTo(List.of(topGeneModel, poorMatchModel)));
     }
 
     @Test
@@ -150,13 +146,12 @@ public class HiPhivePriorityResultTest {
 
     @Test
     public void testGetMouseScoreMatchesModelScore() {
-        double modelScore = 1d;
-        GeneModelPhenotypeMatch geneModel = stubGeneModelPhenotypeMatch(Organism.MOUSE, modelScore);
+        GeneModelPhenotypeMatch geneModel = stubGeneModelPhenotypeMatch(Organism.MOUSE, 1d);
 
-        List<GeneModelPhenotypeMatch> models = Arrays.asList(geneModel);
+        List<GeneModelPhenotypeMatch> models = List.of(geneModel);
         instance = new HiPhivePriorityResult(geneId, geneSymbol, score, queryPhenotypeTerms, models, ppiEvidence, ppiScore, false);
 
-        assertThat(instance.getMouseScore(), equalTo(modelScore));
+        assertThat(instance.getMouseScore(), equalTo(geneModel.getScore()));
     }
     
     @Test
@@ -166,13 +161,12 @@ public class HiPhivePriorityResultTest {
 
     @Test
     public void testGetFishScoreMatchesModelScore() {
-        double modelScore = 1d;
-        GeneModelPhenotypeMatch geneModel = stubGeneModelPhenotypeMatch(Organism.FISH, modelScore);
+        GeneModelPhenotypeMatch geneModel = stubGeneModelPhenotypeMatch(Organism.FISH, 1d);
 
-        List<GeneModelPhenotypeMatch> models = Arrays.asList(geneModel);
+        List<GeneModelPhenotypeMatch> models = List.of(geneModel);
         instance = new HiPhivePriorityResult(geneId, geneSymbol, score, queryPhenotypeTerms, models, ppiEvidence, ppiScore, false);
 
-        assertThat(instance.getFishScore(), equalTo(modelScore));
+        assertThat(instance.getFishScore(), equalTo(geneModel.getScore()));
     }
 
     @Test
